# OpenNyx

./: .gitignore  LICENSE  README.md
.github/workflows/: build-windows.yml  windows-build.yml
docs/: ARCHITECTURE.md  BUILD-STATUS.md  ENGINE-STRATEGY.md  M1-PLAN.md  NETWORK-AUDIT.md  SEARCH-FEASIBILITY.md
shell/: CMakeLists.txt  README.md  index.html  package.json
shell/cmake/: DownloadCEF.cmake
shell/src/: app_icon_png.h  blocklist.cc  blocklist.h  browser_window.cc  browser_window.h  main.js  main_win.cc  opennyx_app.cc  opennyx_app.h  opennyx_client.cc  opennyx_client.h  pages.cc  pages.h  scheme_handler.cc  scheme_handler.h  store.cc  store.h  styles.css
shell/win/: compatibility.manifest  opennyx.rc
